--- a/Stacks-&-Queues/index.html
+++ b/Stacks-&-Queues/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stacks</title>
+    <title>Stacks & Queues</title>
 </head>
 <style>
     body {
@@ -16,7 +16,7 @@
 </style>
 
 <body>
-    <h1>Stacks</h1>
+    <h1>Stacks & Queues</h1>
 
 </body>
 <script src="./index.js"></script>
