added more function in LL practice file

--- a/linked-list/index.html
+++ b/linked-list/index.html
@@ -20,7 +20,8 @@
 <body>
     <h1>Linked List</h1>
 </body>
-<script src="./linkedList.js"></script>
+<!-- <script src="./linkedList.js"></script> -->
+<script src="./practiceLL.js"></script>
 
 
 
