--- a/FreeCodeComp-DSA-Practice/index.html
+++ b/FreeCodeComp-DSA-Practice/index.html
@@ -20,6 +20,7 @@
 <!-- <script src="./index.js"></script> -->
 <!-- <script src="./practice.js"></script> -->
 <!-- <script src="./intermediate.js"></script> -->
-<script src="./projects.js"></script>
+<!-- <script src="./projects.js"></script> -->
+<script src="./morePractice.js"></script>
 
 </html>
