completed frontend Jquery Drum Machine Project

--- a/FreeCodeCamp-Frontend/Projects/Drum-Machine/index.html
+++ b/FreeCodeCamp-Frontend/Projects/Drum-Machine/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="drum-machine">
     <div class="pad-container"></div>
-    <div id="display">77</div>
+    <div id="display">Audio Name</div>
   </div>
 </body>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
