completed frontend 25 + 5 clock project

--- a/FreeCodeCamp-Frontend/Projects/25+5-Clock/index.html
+++ b/FreeCodeCamp-Frontend/Projects/25+5-Clock/index.html
@@ -43,7 +43,8 @@
         </div>
     </div>
 
-    <audio src="https://www.soundsnap.com/two_extended_toy_honks_in_a_row_aos00101" id="bell" type="audio/mpeg"></audio>
+    <audio src="https://cdn.freecodecamp.org/testable-projects-fcc/audio/BeepSound.wav" id="bell"
+        type="audio/mpeg"></audio>
 </body>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"
