--- a/FreeCodeCamp-Frontend/Projects/Javascript-Calculator/index.html
+++ b/FreeCodeCamp-Frontend/Projects/Javascript-Calculator/index.html
@@ -10,7 +10,10 @@
 
 <body>
     <main class="calculator">
-        <div id="display">number</div>
+        <div id="display">
+            <span class="prevVal">0</span>
+            <span class="currVal">0</span>
+        </div>
         <div class="button-wrapper">
             <button id="clear">AC</button>
             <button id="divide">/</button>
